<resources>
    <string name="app_name">Mmarket</string>
    <string name="action_settings">Settings</string>
    <string name="action_layout">Logout</string>
    <string name="welcome">Welcome to Mrefugee</string>
    <string name="nv_login">Login</string>
    <string name="nv_aboutApp">About App</string>
    <string name="nv_sellItem">Sell Item</string>
    <string name="nv_register">Register</string>


    <string name="nv_sendFeedback">Send feedback</string>
    <string name="nv_SecondCategory">Second Category</string>
    <string name="nv_SignIn">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="facebook_app_id">1841298682819444</string>
    <string name="action_logout"> Log Out</string>
    <string name="loading">Loading</string>


</resources>